add: uniform pages and svg favicon reason: first page build added all general uniform pages and the iris favicon

--- a/src/content/docs/reference/Uniforms/General/heldItemId.mdx
+++ b/src/content/docs/reference/Uniforms/General/heldItemId.mdx
@@ -1,6 +1,6 @@
 ---
 title: heldItemId
-description: Uniform heldItemId
+description: heldItemId
 sidebar:
   label: heldItemId
   order: 1
@@ -8,5 +8,3 @@ sidebar:
     text: Outdated
     variant: caution
 ---
-
-import { Aside } from '@astrojs/starlight/components';
