--- a/src/content/docs/reference/Uniforms/General/heldBlockLightValue.mdx
+++ b/src/content/docs/reference/Uniforms/General/heldBlockLightValue.mdx
@@ -1,6 +1,6 @@
 ---
 title: heldBlockLightValue
-description: Uniform heldBlockLightValue
+description: heldBlockLightValue
 sidebar:
   label: heldBlockLightValue
   order: 1
@@ -8,5 +8,3 @@ sidebar:
     text: Outdated
     variant: caution
 ---
-
-import { Aside } from '@astrojs/starlight/components';
