add: added readme on contributions added the readme and added contributors

--- a/src/content/docs/guides/Beginners/first.mdx
+++ b/src/content/docs/guides/Beginners/first.mdx
@@ -4,4 +4,7 @@ description: Get started creating your first shader
 sidebar:
   label: Your First Shader
   order: 1
+  badge:
+    text: Outdated
+    variant: caution
 ---
