--- a/src/content/docs/guides/Beginners/start.mdx
+++ b/src/content/docs/guides/Beginners/start.mdx
@@ -4,4 +4,7 @@ description: All about shaders
 sidebar:
   label: Getting Started
   order: 0
+  badge:
+    text: Outdated
+    variant: caution
 ---
