--- a/src/content/docs/reference/Uniforms/Matrices/modelViewMatrix.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/modelViewMatrix.mdx
@@ -8,3 +8,6 @@ sidebar:
     text: Outdated
     variant: caution
 ---
+import { Aside } from '@astrojs/starlight/components';
+
+<Aside type="danger">This uniform only works on `1.17` and newer.</Aside>
