fix: uniforms: added first 20 uniform syntax completion

--- a/src/content/docs/reference/Uniforms/General/biome_category.mdx
+++ b/src/content/docs/reference/Uniforms/General/biome_category.mdx
@@ -1,5 +1,5 @@
 ---
-title: biome_catagory
+title: biome_category
 description: biome_catagory
 sidebar:
   label: biome_catagory
@@ -9,4 +9,4 @@ sidebar:
     variant: caution
 ---
 
-### `uniform ;`
+### `uniform int biome_category;`
