--- a/src/content/docs/reference/Uniforms/General/biome_precipitation.mdx
+++ b/src/content/docs/reference/Uniforms/General/biome_precipitation.mdx
@@ -2,11 +2,11 @@
 title: biome_percipitation
 description: biome_percipitation
 sidebar:
-  label: biome_percipitation
+  label: biome_precipitation
   order: 1
   badge:
     text: Outdated
     variant: caution
 ---
 
-### `uniform ;`
+### `uniform int biome_precipitation;`
