fix: uniforms: added next 10 declarations

--- a/src/content/docs/reference/Uniforms/General/darknessFactor.mdx
+++ b/src/content/docs/reference/Uniforms/General/darknessFactor.mdx
@@ -12,4 +12,4 @@ import { Aside } from '@astrojs/starlight/components';
 
 <Aside type="danger">This uniform only works on `1.17` and newer.</Aside>
 
-### `uniform ;`
+### `uniform float darknessFactor;`
