--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -2,6 +2,10 @@
 title: Home
 description: Get started building shaders.
 template: splash
+editUrl: false
+lastUpdated: false
+prev: false
+next: false
 hero:
   title: Welcome the to Iris Docs
   tagline: Get started building shaders!
