feat: index: added home page background image and made the styles work to make it look good

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -23,6 +23,8 @@ hero:
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
+<div class="bg-img"></div>
+
 ## Get Started
 
 <CardGrid stagger>
