mod: index: changed intro animation to reduce motion

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -23,7 +23,9 @@ hero:
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-<div class="bg-img"></div>
+<div class="bg-holder">
+  <div class="bg-img"></div>
+</div>
 
 ## Get Started
 
