fix: index: fixed pointer to start article

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -13,7 +13,7 @@ hero:
     file: ../../assets/iris.webp
   actions:
     - text: Get Started
-      link: /guides/start/
+      link: /guides/beginners/start/
       icon: right-arrow
       variant: primary
     - text: Read the docs
@@ -29,7 +29,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 
 <CardGrid stagger>
 	<Card title="Update content" icon="pencil">
-		Learn how to make a shader in [the guides](/guides/start/).
+		Learn how to make a shader in [the guides](/guides/beginners/start/).
 	</Card>
 	<Card title="Add new content" icon="add-document">
 		Help us improve this site on our [github](https://github.com/IrisShaders/ShaderDoc/). 
