feat: Uniforms: added Iris exclusive uniforms up to 1.7

--- a/src/content/docs/reference/Uniforms/General/ambientLight.mdx
+++ b/src/content/docs/reference/Uniforms/General/ambientLight.mdx
@@ -5,8 +5,10 @@ sidebar:
   label: ambientLight
   order: 1
   badge:
-    text: Outdated
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
 ### `uniform float ambientLight;`
+
+This value stores the ambient light property of the current dimension. This roughly correlates to how much sky lighting affects lighting values. More information can be found in the [Minecraft Wiki](https://minecraft.wiki/w/Dimension_type) under "ambient_light".
