--- a/src/content/docs/reference/Uniforms/General/cloudHeight.mdx
+++ b/src/content/docs/reference/Uniforms/General/cloudHeight.mdx
@@ -5,8 +5,10 @@ sidebar:
   label: cloudHeight
   order: 1
   badge:
-    text: Outdated
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
 ### `uniform float cloudHeight;`
+
+This uniform stores the height (y coordinate) of vanilla clouds in blocks based on the current user settigns. Value is `NaN` for dimensions without clouds.
