--- a/src/content/docs/reference/Uniforms/General/currentDate.mdx
+++ b/src/content/docs/reference/Uniforms/General/currentDate.mdx
@@ -5,8 +5,10 @@ sidebar:
   label: currentDate
   order: 1
   badge:
-    text: Outdated
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
 ### `uniform ivec3 currentDate;`
+
+This value stores the system date reported by the OS in the following format: `ivec3(year, month, day)`.
