--- a/src/content/docs/reference/Uniforms/General/firstPersonCamera.mdx
+++ b/src/content/docs/reference/Uniforms/General/firstPersonCamera.mdx
@@ -5,8 +5,10 @@ sidebar:
   label: firstPersonCamera
   order: 1
   badge:
-    text: Outdated
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
-### `uniform bool ;`
+### `uniform bool firstPersonCamera;`
+
+This value is `true` when the player is in the first person camera view and false in any third person camera view.
