--- a/src/content/docs/reference/Uniforms/General/is_sprinting.mdx
+++ b/src/content/docs/reference/Uniforms/General/is_sprinting.mdx
@@ -5,8 +5,10 @@ sidebar:
   label: is_sprinting
   order: 1
   badge:
-    text: Outdated
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
 ### `uniform bool is_sprinting;`
+
+This value is `true` when the player is sprinting and `false` otherwise.
