--- a/src/content/docs/reference/Uniforms/General/maxPlayerAir.mdx
+++ b/src/content/docs/reference/Uniforms/General/maxPlayerAir.mdx
@@ -5,8 +5,10 @@ sidebar:
   label: maxPlayerAir
   order: 1
   badge:
-    text: Outdated
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
 ### `uniform float maxPlayerAir;`
+
+This value stores the maximum player air when underwater. This is the internal value used by Minecraft, not the number of bubbles in the user interface. This value is `0` in modes without player air, such as creative and spectator modes. In a default survival world this value is `300`.
