--- a/src/content/docs/reference/Uniforms/General/rainfall.mdx
+++ b/src/content/docs/reference/Uniforms/General/rainfall.mdx
@@ -5,8 +5,10 @@ sidebar:
   label: rainfall
   order: 1
   badge:
-    text: Outdated
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
 ### `uniform float rainfall;`
+
+This value stores the rainfall property of the current biome as defined by Minecraft internally, and ranges from `0` to `1`. This value does not depend on the current weather, but is a property of the biome. For more information on biomes, see the [Minecraft Wiki](https://minecraft.wiki/w/Biome).
