--- a/src/content/docs/reference/Uniforms/General/relativeEyePosition.mdx
+++ b/src/content/docs/reference/Uniforms/General/relativeEyePosition.mdx
@@ -5,8 +5,10 @@ sidebar:
   label: relativeEyePosition
   order: 1
   badge:
-    text: Outdated
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
 ### `uniform vec3 relativeEyePosition;`
+
+This value stores the world space offset from the player model's head position to the camera's position(ie `cameraPosition - eyePosition`).
