--- a/src/content/docs/reference/Uniforms/General/bedrockLevel.mdx
+++ b/src/content/docs/reference/Uniforms/General/bedrockLevel.mdx
@@ -5,8 +5,10 @@ sidebar:
   label: bedrockLevel
   order: 1
   badge:
-    text: Outdated
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
 ### `uniform int bedrockLevel;`
+
+This value stores the height (y coordinate) of the bedrock floor in current dimension. More information can be found in the [Minecraft Wiki](https://minecraft.wiki/w/Dimension_type) under "min_y".
