--- a/src/content/docs/reference/Uniforms/General/currentYearTime.mdx
+++ b/src/content/docs/reference/Uniforms/General/currentYearTime.mdx
@@ -5,8 +5,10 @@ sidebar:
   label: currentYearTime
   order: 1
   badge:
-    text: Outdated
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
 ### `uniform ivec2 currentYearTime;`
+
+This value stores the time since the beginning of the year and until the end of the year as reported by the OS in the following format: `ivec2(seconds_ellapsed_in_year, seconds_remaining_in_year)`.
