--- a/src/content/docs/reference/Uniforms/General/hasCeiling.mdx
+++ b/src/content/docs/reference/Uniforms/General/hasCeiling.mdx
@@ -5,8 +5,10 @@ sidebar:
   label: hasCeiling
   order: 1
   badge:
-    text: Outdated
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
 ### `uniform bool hasCeiling;`
+
+This value is `true` if the current dimension has a ceiling acording to its dimension properties, and `false` otherwise. More information can be found in the [Minecraft Wiki](https://minecraft.wiki/w/Dimension_type) under "has_ceiling".
