--- a/src/content/docs/reference/Uniforms/General/hasSkylight.mdx
+++ b/src/content/docs/reference/Uniforms/General/hasSkylight.mdx
@@ -5,8 +5,10 @@ sidebar:
   label: hasSkylight
   order: 1
   badge:
-    text: Outdated
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
 ### `uniform bool hasSkylight;`
+
+This value is `true` if the current dimension has a sky and sky lighting, and `false` otherwise. More information can be found in the [Minecraft Wiki](https://minecraft.wiki/w/Dimension_type) under "has_skylight.
