--- a/src/content/docs/reference/Uniforms/General/heightLimit.mdx
+++ b/src/content/docs/reference/Uniforms/General/heightLimit.mdx
@@ -5,8 +5,10 @@ sidebar:
   label: heightLimit
   order: 1
   badge:
-    text: Outdated
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
 ### `uniform int heightLimit;`
+
+This value stores the difference in height (y coordinate) between the lowest block and the highest block that can be placed in the current dimension. More information can be found in the [Minecraft Wiki](https://minecraft.wiki/w/Dimension_type) under "height".
