--- a/src/content/docs/reference/Uniforms/General/isSpectator.mdx
+++ b/src/content/docs/reference/Uniforms/General/isSpectator.mdx
@@ -5,8 +5,10 @@ sidebar:
   label: isSpectator
   order: 1
   badge:
-    text: Outdated
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
 ### `uniform bool isSpectator;`
+
+This value is `true` when the player is in spectator mode and false otherwise
