--- a/src/content/docs/reference/Uniforms/General/is_burning.mdx
+++ b/src/content/docs/reference/Uniforms/General/is_burning.mdx
@@ -5,8 +5,10 @@ sidebar:
   label: is_burning
   order: 1
   badge:
-    text: Outdated
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
 ### `uniform bool is_burning;`
+
+This value is `true` when the player is on fire and `false` otherwise.
