--- a/src/content/docs/reference/Uniforms/General/is_hurt.mdx
+++ b/src/content/docs/reference/Uniforms/General/is_hurt.mdx
@@ -5,8 +5,10 @@ sidebar:
   label: is_hurt
   order: 1
   badge:
-    text: Outdated
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
 ### `uniform bool is_hurt;`
+
+This value is `true` when the player is being hurt and for a brief second aftwards and `false` otherwise.
