--- a/src/content/docs/reference/Uniforms/General/is_invisible.mdx
+++ b/src/content/docs/reference/Uniforms/General/is_invisible.mdx
@@ -5,8 +5,10 @@ sidebar:
   label: is_invisible
   order: 1
   badge:
-    text: Outdated
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
-### `uniform bool is_invi;`
+### `uniform bool is_invisible;`
+
+This value is `true` when the player is invisible (either by being in spectator mode or by using invisibility potions), `false` otherwise.
