--- a/src/content/docs/reference/Uniforms/General/is_on_ground.mdx
+++ b/src/content/docs/reference/Uniforms/General/is_on_ground.mdx
@@ -5,8 +5,10 @@ sidebar:
   label: is_on_ground
   order: 1
   badge:
-    text: Outdated
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
 ### `uniform bool is_on_ground;`
+
+This value is `true` any time the player is touching the ground and not flying, and `false` otherwise (such as when flying, falling, swimming and not touching the bottom, etc).
