--- a/src/content/docs/reference/Uniforms/General/is_sneaking.mdx
+++ b/src/content/docs/reference/Uniforms/General/is_sneaking.mdx
@@ -5,8 +5,10 @@ sidebar:
   label: is_sneaking
   order: 1
   badge:
-    text: Outdated
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
 ### `uniform bool is_sneaking;`
+
+This value is `true` when the player is sneaking and `false` otherwise.
