--- a/src/content/docs/reference/Uniforms/General/maxPlayerArmor.mdx
+++ b/src/content/docs/reference/Uniforms/General/maxPlayerArmor.mdx
@@ -5,8 +5,10 @@ sidebar:
   label: maxPlayerArmour
   order: 1
   badge:
-    text: Outdated
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
 ### `uniform float maxPlayer;`
+
+This value stores the maximum player armor value. This is the internal value used by Minecraft, not the number of armor icons in the user interface. In a default world this value is `50` unless changed by mods.
