--- a/src/content/docs/reference/Uniforms/General/maxPlayerHealth.mdx
+++ b/src/content/docs/reference/Uniforms/General/maxPlayerHealth.mdx
@@ -5,8 +5,10 @@ sidebar:
   label: maxPlayerHealth
   order: 1
   badge:
-    text: Outdated
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
 ### `uniform float maxPlayerHealth;`
+
+This value stores the maximum player health value, which is twice the number of maximum hearts (one value for each half-heart).  This value is `0` in modes without player health, such as creative and spectator modes. In a default survival world this value is `20` unless changed by mods or effects like potions or golden apples.
