--- a/src/content/docs/reference/Uniforms/General/maxPlayerHunger.mdx
+++ b/src/content/docs/reference/Uniforms/General/maxPlayerHunger.mdx
@@ -5,8 +5,10 @@ sidebar:
   label: maxPlayerHunger
   order: 1
   badge:
-    text: Outdated
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
 ### `uniform float maxPlayerHunger;`
+
+This value stores the maximum player hunger value, which is twice the number of hunger icons in the user interface (one value for each half-hunger icon). In a default survival world this value is `20` unless changed by mods. Modes without hunger (such as creative and spectator modes) will still indicate the same maximum hunger value.
