--- a/src/content/docs/reference/Uniforms/General/playerLookVector.mdx
+++ b/src/content/docs/reference/Uniforms/General/playerLookVector.mdx
@@ -5,8 +5,10 @@ sidebar:
   label: playerLookVector
   order: 1
   badge:
-    text: Outdated
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
 ### `uniform vec3 playerLookVector;`
+
+This value stores the world alligned direction the player model's head is facing. This facing direction is not affected by animations such as swimming, making this value equivalent to the direction the camera is facing in first person and rear third person views, and the reverse of the camera direction in front third person view.
