--- a/src/content/docs/reference/Uniforms/General/temperature.mdx
+++ b/src/content/docs/reference/Uniforms/General/temperature.mdx
@@ -5,8 +5,10 @@ sidebar:
   label: temperature
   order: 1
   badge:
-    text: Outdated
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
 ### `uniform float temperature;`
+
+This value stores the temperature property of the current biome as defined by Minecraft internally. In vanilla Minecraft this will range in value from `-0.7` to `2.0`, however mods may have values outside that range. For more information on biomes, see the [Minecraft Wiki](https://minecraft.wiki/w/Biome).
