added basic to helditem ID and Helditmeid 2

--- a/src/content/docs/reference/Uniforms/General/heldItemId2.mdx
+++ b/src/content/docs/reference/Uniforms/General/heldItemId2.mdx
@@ -4,9 +4,8 @@ description: heldItemId2
 sidebar:
   label: heldItemId2
   order: 1
-  badge:
-    text: Outdated
-    variant: caution
 ---
 
 ### `uniform int heldItemId2;`
+
+The id of the item held in the off hand. This only has a value if the item held in the off hand is defined in `item.properties`. If this is not defined it outputs `0`.
