--- a/src/content/docs/reference/Uniforms/General/heldItemId.mdx
+++ b/src/content/docs/reference/Uniforms/General/heldItemId.mdx
@@ -4,9 +4,8 @@ description: heldItemId
 sidebar:
   label: heldItemId
   order: 1
-  badge:
-    text: Outdated
-    variant: caution
 ---
 
 ### `uniform int heldItemId;`
+
+The id of the item held in the main hand. This only has a value if the item held in the main hand is defined in `item.properties`. If this is not defined it outputs `0`.
