fix: uniforms: missing . in isSpectator.mdx

--- a/src/content/docs/reference/Uniforms/General/isSpectator.mdx
+++ b/src/content/docs/reference/Uniforms/General/isSpectator.mdx
@@ -11,4 +11,4 @@ sidebar:
 
 ### `uniform bool isSpectator;`
 
-This value is `true` when the player is in spectator mode and false otherwise
+This value is `true` when the player is in spectator mode and false otherwise.
