fix: uniforms: fixed spelling error in cloudHeight mod: uniforms: changed contents of heldItemId and heldItemId2

--- a/src/content/docs/reference/Uniforms/General/cloudHeight.mdx
+++ b/src/content/docs/reference/Uniforms/General/cloudHeight.mdx
@@ -11,4 +11,4 @@ sidebar:
 
 ### `uniform float cloudHeight;`
 
-This uniform stores the height (y coordinate) of vanilla clouds in blocks based on the current user settigns. Value is `NaN` for dimensions without clouds.
+This uniform stores the height (y coordinate) of vanilla clouds in blocks based on the current user settings. Value is `NaN` for dimensions without clouds.
