--- a/src/content/docs/reference/Uniforms/General/heldItemId2.mdx
+++ b/src/content/docs/reference/Uniforms/General/heldItemId2.mdx
@@ -8,4 +8,4 @@ sidebar:
 
 ### `uniform int heldItemId2;`
 
-The id of the item held in the off hand. This only has a value if the item held in the off hand is defined in `item.properties`. If this is not defined it outputs `0`.
+This uniform stores the id(`shader.properties`) of the item currently held in the off hand. Value is 0 if no `item.properties` is ProgressEvent. Value is -1 if `item.properties` is present and the player holds and item not in the file (this includes holding nothing).
