mod: uniforms: - added descriptions - removed unused vars - edited 1.17+ flag to new standard

--- a/src/content/docs/reference/Uniforms/General/alphaTestRef.mdx
+++ b/src/content/docs/reference/Uniforms/General/alphaTestRef.mdx
@@ -4,10 +4,11 @@ description: alphaTestRef
 sidebar:
   label: alphaTestRef
   order: 1
+  badge:
+    text: 1.17+
+    variant: danger
 ---
 import { Aside } from '@astrojs/starlight/components';
-
-<Aside type="danger">This uniform only works on `1.17` and newer.</Aside>
 
 ### `uniform float alphaTestRef;`
 
