--- a/src/content/docs/reference/Uniforms/General/aspectRatio.mdx
+++ b/src/content/docs/reference/Uniforms/General/aspectRatio.mdx
@@ -4,9 +4,8 @@ description: aspectRatio
 sidebar:
   label: aspectRatio
   order: 1
-  badge:
-    text: Outdated
-    variant: caution
 ---
 
 ### `uniform float aspectRatio;`
+
+This value stores the aspect ratio of the game in a format of `viewWidth`/`viewHeight`. More information about aspect ratios and there uses can be found on [wikipedia](https://en.wikipedia.org/wiki/Aspect_ratio_(image)).
