--- a/src/content/docs/reference/Uniforms/General/atlasSize.mdx
+++ b/src/content/docs/reference/Uniforms/General/atlasSize.mdx
@@ -4,9 +4,8 @@ description: atlasSize
 sidebar:
   label: atlasSize
   order: 1
-  badge:
-    text: Outdated
-    variant: caution
 ---
 
 ### `uniform ivec2 atlasSize;`
+
+This value stores the size of the texture atlas. It only stores a value when the texture atlas is bound, and will return `0` when not.
