--- a/src/content/docs/reference/Uniforms/General/blindness.mdx
+++ b/src/content/docs/reference/Uniforms/General/blindness.mdx
@@ -4,9 +4,8 @@ description: blindness
 sidebar:
   label: blindness
   order: 1
-  badge:
-    text: Outdated
-    variant: caution
 ---
 
 ### `uniform float blindness;`
+
+This value stores the short view distance as a normalized (0-1) float. This value rising gives the illusion of a blindness effect, only allowing limited vision in a short distance in front of the player.
