--- a/src/content/docs/reference/Uniforms/General/blockEntityId.mdx
+++ b/src/content/docs/reference/Uniforms/General/blockEntityId.mdx
@@ -10,3 +10,5 @@ sidebar:
 ---
 
 ### `uniform int blockEntityId;`
+
+This uniform stores the id(`block.properties`) of the current block entity (a tile entity). Value is 0 if no `block.properties` is ProgressEvent. Value is -1 if `block.properties` is present and the block is either not in the file, or not en entity (this includes holding nothing).
