mod: uniforms: added data on 2 more uniforms

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -28,13 +28,13 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 ## Get Started
 
 <CardGrid stagger>
-	<Card title="Update content" icon="pencil">
+	<Card title="Make a shader" icon="pencil">
 		Learn how to make a shader in [the guides](/guides/beginners/start/).
 	</Card>
 	<Card title="Add new content" icon="add-document">
 		Help us improve this site on our [github](https://github.com/IrisShaders/ShaderDoc/). 
 	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Iris Docs](/reference/overview/).
+	<Card title="Read a how to" icon="open-book">
+		Learn more in [the Iris Docs](/how_to/spaces).
 	</Card>
 </CardGrid>
