--- a/src/content/docs/reference/Uniforms/General/cameraPosition.mdx
+++ b/src/content/docs/reference/Uniforms/General/cameraPosition.mdx
@@ -4,9 +4,8 @@ description: cameraPosition
 sidebar:
   label: cameraPosition
   order: 1
-  badge:
-    text: Outdated
-    variant: caution
 ---
 
 ### `uniform vec3 cameraPosition;`
+
+This uniform stores the position of the camera in world space. For more information on spaces, visit this [how to article](/how_to/spaces) on the different spaces.
