--- a/src/content/docs/reference/Uniforms/General/playerLookVector.mdx
+++ b/src/content/docs/reference/Uniforms/General/playerLookVector.mdx
@@ -11,4 +11,4 @@ sidebar:
 
 ### `uniform vec3 playerLookVector;`
 
-This value stores the world alligned direction the player model's head is facing. This facing direction is not affected by animations such as swimming, making this value equivalent to the direction the camera is facing in first person and rear third person views, and the reverse of the camera direction in front third person view.
+This value stores the world aligned direction the player model's head is facing. This facing direction is not affected by animations such as swimming, making this value equivalent to the direction the camera is facing in first person and rear third person views, and the reverse of the camera direction in front third person view.
