--- a/src/content/docs/reference/Uniforms/General/previousCameraPosition.mdx
+++ b/src/content/docs/reference/Uniforms/General/previousCameraPosition.mdx
@@ -4,9 +4,8 @@ description: previousCameraPosition
 sidebar:
   label: previousCameraPosition
   order: 1
-  badge:
-    text: Outdated
-    variant: caution
 ---
 
 ### `uniform vec3 previousCameraPosition;`
+
+This value is the [cameraPosition](/reference/uniforms/general/cameraposition) uniform value from the previous frame.
