mod: uniforms: added data to viewWidth and viewHeight, fixed aspectRatio linking

--- a/src/content/docs/reference/Uniforms/General/aspectRatio.mdx
+++ b/src/content/docs/reference/Uniforms/General/aspectRatio.mdx
@@ -8,4 +8,4 @@ sidebar:
 
 ### `uniform float aspectRatio;`
 
-This value stores the aspect ratio of the game in a format of `viewWidth`/`viewHeight`. More information about aspect ratios and there uses can be found on [wikipedia](https://en.wikipedia.org/wiki/Aspect_ratio_(image)).
+This value stores the aspect ratio of the game in a format of [viewWidth](/reference/uniforms/general/viewwidth)/[viewHeight](/reference/uniforms/general/viewheight). More information about aspect ratios and there uses can be found on [wikipedia](https://en.wikipedia.org/wiki/Aspect_ratio_(image)).
