--- a/src/content/docs/reference/Uniforms/General/viewHeight.mdx
+++ b/src/content/docs/reference/Uniforms/General/viewHeight.mdx
@@ -4,9 +4,8 @@ description: viewHeight
 sidebar:
   label: viewHeight
   order: 1
-  badge:
-    text: Outdated
-    variant: caution
 ---
 
 ### `uniform float viewHeight;`
+
+This uniform saves the height of the screen in pixels.
