--- a/src/content/docs/reference/Uniforms/General/viewWidth.mdx
+++ b/src/content/docs/reference/Uniforms/General/viewWidth.mdx
@@ -4,9 +4,8 @@ description: viewWidth
 sidebar:
   label: viewWidth
   order: 1
-  badge:
-    text: Outdated
-    variant: caution
 ---
 
 ### `uniform float viewWidth;`
+
+This uniform saves the width of the screen in pixels.
