mod: uniforms: updated viewHeight and viewWidth

--- a/src/content/docs/reference/Uniforms/General/fogColor.mdx
+++ b/src/content/docs/reference/Uniforms/General/fogColor.mdx
@@ -4,9 +4,8 @@ description: fogColor
 sidebar:
   label: fogColor
   order: 1
-  badge:
-    text: Outdated
-    variant: caution
 ---
 
 ### `uniform vec3 fogColor;`
+
+This vector 3 stores the color that the game has calculated that the fog should be for a preticular pixel. This value is based on the sky color in the area.
