--- a/src/content/docs/reference/Uniforms/General/fogDensity.mdx
+++ b/src/content/docs/reference/Uniforms/General/fogDensity.mdx
@@ -10,3 +10,5 @@ sidebar:
 ---
 
 ### `uniform float fogDensity;`
+
+This uniform stores the value of the suggested density of fog based on distance for the current fragment.
