--- a/src/content/docs/reference/Uniforms/General/viewHeight.mdx
+++ b/src/content/docs/reference/Uniforms/General/viewHeight.mdx
@@ -8,4 +8,4 @@ sidebar:
 
 ### `uniform float viewHeight;`
 
-This uniform saves the height of the screen in pixels.
+This uniform saves the height of the screen in pixels/fragments.
