--- a/src/content/docs/reference/Uniforms/General/viewWidth.mdx
+++ b/src/content/docs/reference/Uniforms/General/viewWidth.mdx
@@ -8,4 +8,4 @@ sidebar:
 
 ### `uniform float viewWidth;`
 
-This uniform saves the width of the screen in pixels.
+This uniform saves the width of the screen in pixels/fragments.
