mod: uniforms: changed fogColor and fogDensity

--- a/src/content/docs/reference/Uniforms/General/fogColor.mdx
+++ b/src/content/docs/reference/Uniforms/General/fogColor.mdx
@@ -8,4 +8,4 @@ sidebar:
 
 ### `uniform vec3 fogColor;`
 
-This vector 3 stores the color that the game has calculated that the fog should be for a preticular pixel. This value is based on the sky color in the area.
+This vector 3 stores the color that the game has calculated that the fog should be for a pixel/fragment. This value is based on the sky color in the area.
