--- a/src/content/docs/reference/Uniforms/General/fogDensity.mdx
+++ b/src/content/docs/reference/Uniforms/General/fogDensity.mdx
@@ -11,4 +11,4 @@ sidebar:
 
 ### `uniform float fogDensity;`
 
-This uniform stores the value of the suggested density of fog based on distance for the current fragment.
+This uniform stores the value of the suggested density of fog based on depth of the current fragment.
