--- a/src/content/docs/reference/Uniforms/General/thunderStrength.mdx
+++ b/src/content/docs/reference/Uniforms/General/thunderStrength.mdx
@@ -11,4 +11,4 @@ sidebar:
 
 ### `uniform float thunderStrength;`
 
-This value is equivalent to `rainStrength` but is only non-zero when there is currently a thunder storm (e.g. weather set thunder). The value ranges between `0` to `1` where `0` means no thunder and `1` means thunder storm, the value is interpolated between those values during transitions in weather.
+This value is equivalent to [rainStrength](/reference/uniforms/general/rainstrength) but is only non-zero when there is currently a thunder storm (e.g. weather set thunder). The value ranges between `0` to `1` where `0` means no thunder and `1` means thunder storm, the value is interpolated between those values during transitions in weather.
