mod: uniforms: - modified blockEntityId to remove the outdated tag - modified fogColor to link to skyColor - modified fogDensity - added the data to hideGUI - awaiting verification - modified rainStrength to remove the outdated tag - added data to skyColor

--- a/src/content/docs/reference/Uniforms/General/hideGUI.mdx
+++ b/src/content/docs/reference/Uniforms/General/hideGUI.mdx
@@ -4,9 +4,8 @@ description: hideGUI
 sidebar:
   label: hideGUI
   order: 1
-  badge:
-    text: Outdated
-    variant: caution
 ---
 
 ### `uniform int hideGUI;`
+
+This value stores weather or not the gui is hidden. This value is either `0` or `1`, with `0` being GUI visible and `1` being GUI hidden.
