feat: Uniforms: added time/celestial uniforms and made hideGUI a bool

--- a/src/content/docs/reference/Uniforms/General/hideGUI.mdx
+++ b/src/content/docs/reference/Uniforms/General/hideGUI.mdx
@@ -6,6 +6,6 @@ sidebar:
   order: 1
 ---
 
-### `uniform int hideGUI;`
+### `uniform bool hideGUI;`
 
-This value stores weather or not the gui is hidden. This value is either `0` or `1`, with `0` being GUI visible and `1` being GUI hidden.
+This value stores weather or not the gui is hidden. This value is `false` when the GUI visible and `true` when the GUI hidden (e.g. by pressing f1).
