--- a/src/content/docs/reference/Uniforms/General/moonPhase.mdx
+++ b/src/content/docs/reference/Uniforms/General/moonPhase.mdx
@@ -4,9 +4,8 @@ description: moonPhase
 sidebar:
   label: moonPhase
   order: 1
-  badge:
-    text: Outdated
-    variant: caution
 ---
 
 ### `uniform int moonPhase;`
+
+This value represents the current moon phase, with `0` being full moon, `1` being waning gibbous, `2` being three quarters, `3` being waning crescent, `4` being new moon, `5` being waxing crescent, `6` being first quarter, and `7` being waxing gibbous.
