--- a/src/content/docs/reference/Uniforms/General/worldDay.mdx
+++ b/src/content/docs/reference/Uniforms/General/worldDay.mdx
@@ -4,9 +4,8 @@ description: wordDay
 sidebar:
   label: wordDay
   order: 1
-  badge:
-    text: Outdated
-    variant: caution
 ---
 
 ### `uniform int worldDay;`
+
+This value stores the world day, which is the amount of in-gmae days that have passed since the beginning of the world. This is equivalent to the command `time query day` and the value shown in the f3 menu. This value is reset by any `time set` command.
