--- a/src/content/docs/reference/Uniforms/General/sunPosition.mdx
+++ b/src/content/docs/reference/Uniforms/General/sunPosition.mdx
@@ -4,9 +4,8 @@ description: sunPosition
 sidebar:
   label: sunPosition
   order: 1
-  badge:
-    text: Outdated
-    variant: caution
 ---
 
 ### `uniform vec3 sunPosition;`
+
+This value stores the position of the sun in view space. The length of this value is always `100`, as it represents a position not a direction. This value can be converted to screen space directly to get the screen space position of the sun.
