--- a/src/content/docs/reference/Uniforms/General/worldTime.mdx
+++ b/src/content/docs/reference/Uniforms/General/worldTime.mdx
@@ -4,9 +4,8 @@ description: worldTime
 sidebar:
   label: worldTime
   order: 1
-  badge:
-    text: Outdated
-    variant: caution
 ---
 
 ### `uniform int worldTime;`
+
+This value stores the world time within the current day. This value is equivalent to the command `time query daytime`, and can range between `0` and `23999` and resets after each day.
