fix: index: added Iris Discord join link

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -28,13 +28,13 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 ## Get Started
 
 <CardGrid stagger>
-	<Card title="Make a shader" icon="pencil">
-		Learn how to make a shader in [the guides](/guides/beginners/start/).
+	<Card title="Chat On Discord" icon="discord">
+		Join the [Iris Discord](https://discord.com/invite/jQJnav2jPu).
 	</Card>
 	<Card title="Add new content" icon="add-document">
 		Help us improve this site on our [github](https://github.com/IrisShaders/ShaderDoc/). 
 	</Card>
-	<Card title="Read a how to" icon="open-book">
-		Learn more in [the Iris Docs](/how_to/spaces).
+	<Card title="Chat with us" icon="email">
+		Chat with us in the Iris Discord.
 	</Card>
 </CardGrid>
