mod: index: added ping for discord

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -35,6 +35,6 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 		Help us improve this site on our [github](https://github.com/IrisShaders/ShaderDoc/). 
 	</Card>
 	<Card title="Chat with us" icon="email">
-		Chat with us in the Iris Discord.
+		Chat with us in the Iris Discord, you can pin `@Documentation Developer`.
 	</Card>
 </CardGrid>
