--- a/src/content/docs/reference/Directives/flags.mdx
+++ b/src/content/docs/reference/Directives/flags.mdx
@@ -4,9 +4,32 @@ description: Feature Flags
 sidebar:
   label: Feature Flags
   order: 1
-  badge:
-    text: Outdated
-    variant: caution
 ---
 
-import { Aside } from '@astrojs/starlight/components';
+Feature flags are a Iris system to query the activation state of certain features. To activate them there are two directives that can be placed in `shader.properties`: `iris.features.required` and `iris.features.optional`. Required will throw and error if your pc or Iris does not support the feature. Optional will create a define that can be used to test the availability of such a feature. Additionally the `IS_IRIS` define can be used to test if your shader is in Iris or optifine, and always exists.
+<br/>
+To use the flags add the following to your `shaders.properties`:
+```properties
+iris.features.required=SEPARATE_HARDWARE_SAMPLERS COMPUTE_SHADERS
+iris.features.optional=BLOCK_EMISSION_ATTRIBUTE ENTITY_TRANSLUCENT SSBO
+```
+
+The following are currently valid options:
+
+`SEPARATE_HARDWARE_SAMPLERS` (required for Separate Hardware Shadow Samplers)
+
+`PER_BUFFER_BLENDING`
+
+`COMPUTE_SHADERS`
+
+`ENTITY_TRANSLUCENT` (recommended, but not required for Entity Translucent)
+
+`SSBO` (required for Shader Storage Buffer Objects)
+
+`CUSTOM_IMAGES` (required for Custom Images)
+
+`HIGHER_SHADOWCOLOR` (required for Extended Shadowcolor)
+
+`REVERSED_CULLING` (recommended, but not required for Reverse Shadow Culling)
+
+`BLOCK_EMISSION_ATTRIBUTE` (recommended, but not required for [Block Emission: at_midBlock.w] as of [iris-1.7.0-snapshotmc1.20.4-a787322])
