--- a/src/content/docs/reference/overview.mdx
+++ b/src/content/docs/reference/overview.mdx
@@ -21,5 +21,5 @@ There on the left, look in the nav bar!
 <LinkCard
   title="Feature Flags"
   description="Good old feature flags"
-  href=""
+  href="/reference/directives/flags"
 />
