Fix shadowcomp name

--- a/src/content/docs/reference/Programs/shadow_comp.mdx
+++ b/src/content/docs/reference/Programs/shadow_comp.mdx
@@ -1,8 +1,8 @@
 ---
-title: Shadow Complementary
-description: Shadow Complementary Programs
+title: Shadow Compositing
+description: shadowcomp Programs
 sidebar:
-  label: Shadow Complementary
+  label: Shadow Compositing
   order: 4
   badge:
     text: Outdated
