mod: uniforms: fixed capitalizations in shadow_comp (HAHA IMS, you suck)

--- a/src/content/docs/reference/Programs/shadow_comp.mdx
+++ b/src/content/docs/reference/Programs/shadow_comp.mdx
@@ -1,6 +1,6 @@
 ---
 title: Shadow Compositing
-description: shadowcomp Programs
+description: Shadowcomp Programs
 sidebar:
   label: Shadow Compositing
   order: 4
