--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -38,3 +38,11 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 		Chat with us at <span style="color:#7ce0e0">`@Documentation Developer`</span> on the discord .
 	</Card>
 </CardGrid>
+
+## Contributors:
+
+A bit thanks to the many people below who make this site work. This would not be the same without you.
+
+- WhyFencePost: Project lead, page design, data transfer
+- NinjaMike: Many uniforms including Iris exclusive uniforms
+- IMS: Setting up the page, general support of the site and also the URL
