--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -41,7 +41,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 
 ## Contributors:
 
-A bit thanks to the many people below who make this site work. This would not be the same without you.
+A big thanks to the many people below who make this site work. This would not be the same without you.
 
 - WhyFencePost: Project lead, page design, data transfer
 - NinjaMike: Many uniforms including Iris exclusive uniforms
