mod: made minor spelling changes and changed the unfinished flag

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -39,7 +39,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 	</Card>
 </CardGrid>
 
-## Contributors:
+## Contributors
 
 A big thanks to the many people below who make this site work. This would not be the same without you.
 
