--- a/src/content/docs/reference/Uniforms/General/darknessFactor.mdx
+++ b/src/content/docs/reference/Uniforms/General/darknessFactor.mdx
@@ -5,7 +5,7 @@ sidebar:
   label: darknessFactor
   order: 1
   badge:
-    text: Outdated
+    text: Unfinished
     variant: caution
 ---
 import { Aside } from '@astrojs/starlight/components';
