--- a/src/content/docs/reference/Uniforms/Matrices/gbufferProjectionInverse.mdx
+++ b/src/content/docs/reference/Uniforms/Matrices/gbufferProjectionInverse.mdx
@@ -5,7 +5,7 @@ sidebar:
   label: gbufferProjectionInverse
   order: 1
   badge:
-    text: Outdated
+    text: Unfinished
     variant: caution
 ---
 
