feat: Uniforms: added several more uniforms

--- a/src/content/docs/reference/Uniforms/General/frameCounter.mdx
+++ b/src/content/docs/reference/Uniforms/General/frameCounter.mdx
@@ -4,9 +4,8 @@ description: frameCounter
 sidebar:
   label: frameCounter
   order: 1
-  badge:
-    text: Unfinished
-    variant: caution
 ---
 
 ### `uniform int frameCounter;`
+
+This value stores the number of frames since the beginning of the program. The value resets to `0` the frame after reaching `720719`.
