--- a/src/content/docs/reference/Uniforms/General/heldItemId2.mdx
+++ b/src/content/docs/reference/Uniforms/General/heldItemId2.mdx
@@ -8,4 +8,4 @@ sidebar:
 
 ### `uniform int heldItemId2;`
 
-This uniform stores the id(`shader.properties`) of the item currently held in the off hand. Value is 0 if no `item.properties` is ProgressEvent. Value is -1 if `item.properties` is present and the player holds an item not in the file (this includes holding nothing).
+This uniform stores the id(`shader.properties`) of the item currently held in the off hand. Value is 0 if no `item.properties` is present. Value is -1 if `item.properties` is present and the player holds an item not in the file (this includes holding nothing).
