--- a/src/content/docs/reference/Uniforms/General/nightVision.mdx
+++ b/src/content/docs/reference/Uniforms/General/nightVision.mdx
@@ -4,9 +4,8 @@ description: nightVision
 sidebar:
   label: nightVision
   order: 1
-  badge:
-    text: Unfinished
-    variant: caution
 ---
 
 ### `uniform float nightVision;`
+
+This value stores the night vision effect as a multiplier. It ranges from `0` to `1` where `0` is no night vision and `1` is full night vision. The uniform is only between `0` and `1` during transitions between having or not having night vision. More information on the blindness effect can be found at the [Minecraft Wiki](https://minecraft.wiki/w/Night_Vision).
