--- a/src/content/docs/reference/Uniforms/General/screenBrightness.mdx
+++ b/src/content/docs/reference/Uniforms/General/screenBrightness.mdx
@@ -5,8 +5,10 @@ sidebar:
   label: screenBrightness
   order: 1
   badge:
-    text: Unfinished
+    text: Outdated
     variant: caution
 ---
 
 ### `uniform float screenBrightness;`
+
+This uniform stores the screen brightness as set by the user in the video settings. The value ranges from `0` (lowest brightness) to `1` (highest brightness).
