--- a/src/content/docs/reference/Uniforms/General/blindness.mdx
+++ b/src/content/docs/reference/Uniforms/General/blindness.mdx
@@ -8,4 +8,4 @@ sidebar:
 
 ### `uniform float blindness;`
 
-This value stores the short view distance as a normalized (0-1) float. This value rising gives the illusion of a blindness effect, only allowing limited vision in a short distance in front of the player.
+This value stores the blindness effect as a multiplier. It ranges from `0` to `1` where `0` is no blindness and `1` is full blindness. The uniform is only between `0` and `1` during transitions between having or not having blindness. More information on the blindness effect can be found at the [Minecraft Wiki](https://minecraft.wiki/w/Blindness).
