--- a/src/content/docs/reference/Uniforms/General/centerDepthSmooth.mdx
+++ b/src/content/docs/reference/Uniforms/General/centerDepthSmooth.mdx
@@ -4,9 +4,8 @@ description: centerDepthSmooth
 sidebar:
   label: centerDepthSmooth
   order: 1
-  badge:
-    text: Unfinished
-    variant: caution
 ---
 
 ### `uniform float centerDepthSmooth;`
+
+This uniform stores the value in the depth buffer `depthtex0` at the center of the screen, smoothed over time. The speed of the smoothing can be controlled with `centerDepthSmoothHalflife`, a `const` `float` which stores the transition halflife in ticks.
