--- a/src/content/docs/reference/Uniforms/General/frameTimeCounter.mdx
+++ b/src/content/docs/reference/Uniforms/General/frameTimeCounter.mdx
@@ -4,9 +4,8 @@ description: frameTimeCounter
 sidebar:
   label: frameTimeCounter
   order: 1
-  badge:
-    text: Unfinished
-    variant: caution
 ---
 
 ### `uniform float frameTimeCounter;`
+
+This value stores the running time of the game in seconds. This value resets after 3600s and does not pause during the pause screen.
