add more uniforms

--- a/src/content/docs/reference/Uniforms/General/far.mdx
+++ b/src/content/docs/reference/Uniforms/General/far.mdx
@@ -4,9 +4,8 @@ description: far
 sidebar:
   label: far
   order: 1
-  badge:
-    text: Unfinished
-    variant: caution
 ---
 
 ### `uniform float far;`
+
+The far clipping plane distance.
