--- a/src/content/docs/reference/Uniforms/General/heldBlockLightValue.mdx
+++ b/src/content/docs/reference/Uniforms/General/heldBlockLightValue.mdx
@@ -4,9 +4,7 @@ description: heldBlockLightValue
 sidebar:
   label: heldBlockLightValue
   order: 1
-  badge:
-    text: Unfinished
-    variant: caution
 ---
 
 ### `uniform int heldBlockLightValue;`
+The light strength of the item held in the player's hand.
