--- a/src/content/docs/reference/Uniforms/General/playerMood.mdx
+++ b/src/content/docs/reference/Uniforms/General/playerMood.mdx
@@ -4,9 +4,10 @@ description: playerMood
 sidebar:
   label: playerMood
   order: 1
-  badge:
-    text: Unfinished
-    variant: caution
 ---
 
 ### `uniform float playerMood;`
+
+The 'mood' value for the player. When it hits 1.0, a cave noise is played.
+
+Further reading - [Minecraft Wiki](https://minecraft.fandom.com/wiki/Ambience#Mood_algorithm)
