--- a/src/content/docs/reference/Uniforms/General/renderStage.mdx
+++ b/src/content/docs/reference/Uniforms/General/renderStage.mdx
@@ -15,7 +15,7 @@ This uniform stores the "render stage" of the current geometry. This can be used
 
 | define                                | Description                                                                                                                                |
 | ------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------ |
-| MC_RENDER_STAGE_NONE                  | Unfinished                                                                                                                                  |
+| MC_RENDER_STAGE_NONE                  | Undefined                                                                                                                                  |
 | MC_RENDER_STAGE_SKY                   | The upper portion of the sky not including stars or textures like the sun/moon                                                             |
 | MC_RENDER_STAGE_SUNSET                | The lower portion of the sky used to generate the sunset effect, does not include textures like the sun/moon                               |
 | MC_RENDER_STAGE_CUSTOM_SKY            | Custom sky texture from resource pack, such as from Optifine or FabricSkyBoxes                                                             |
