--- a/src/content/docs/reference/Uniforms/General/wetness.mdx
+++ b/src/content/docs/reference/Uniforms/General/wetness.mdx
@@ -4,9 +4,11 @@ description: wetness
 sidebar:
   label: wetness
   order: 1
-  badge:
-    text: Unfinished
-    variant: caution
 ---
 
 ### `uniform float wetness;`
+
+This uniform outputs the current strength of rain and is non-zero when there is currently a rain storm (e.g. weather set rain). The value ranges between `0` to `1` where `0` means no rain and `1` means rain storm, the value is interpolated between those values during transitions in weather.
+The transition is significantly slower, and can be controlled with `wetnessHalfLife`.
+
+See also - [`rainStrength`](/reference/uniforms/general/rainstrength)
