--- a/src/content/docs/reference/Uniforms/General/heldBlockLightValue2.mdx
+++ b/src/content/docs/reference/Uniforms/General/heldBlockLightValue2.mdx
@@ -4,9 +4,7 @@ description: heldBlockLightValue2
 sidebar:
   label: heldBlockLightValue2
   order: 1
-  badge:
-    text: Unfinished
-    variant: caution
 ---
 
 ### `uniform int heldBlockLightValue2;`
+The light strength of the item held in the player's offhand.
