--- a/src/content/docs/reference/Uniforms/General/playerMood.mdx
+++ b/src/content/docs/reference/Uniforms/General/playerMood.mdx
@@ -8,8 +8,4 @@ sidebar:
 
 ### `uniform float playerMood;`
 
-The 'mood' value for the player. This value starts at `0.0`, and gradually increases over time. The rate at which the value increases is higher when the player is in a darker environment and there are less transparent blocks nearby. 
-
-When this value hits `1.0`, a cave noise is played, and it is reset to `0.0`.
-
-Further reading - [Minecraft Wiki](https://minecraft.fandom.com/wiki/Ambience#Mood_algorithm)
+This uniform stores the player's mood value. This value increments when the player is in a cave (or any structure with low block and sky light). The value ranges between `0.0` and `1.0` and resets to `0.0` after it increments to `1.0`. More information on mood can be found at the [Minecraft Wiki](https://minecraft.wiki/w/Ambience#Cave_ambience).
