--- a/src/content/docs/reference/Uniforms/General/heldBlockLightValue.mdx
+++ b/src/content/docs/reference/Uniforms/General/heldBlockLightValue.mdx
@@ -7,4 +7,4 @@ sidebar:
 ---
 
 ### `uniform int heldBlockLightValue;`
-The light strength of the item held in the player's hand. This ranges from 0-15 for vanilla blocks, however some modded blocks may have a higher value.
+The light strength of the item held in the player's hand. This ranges from `0`-`15` for vanilla blocks, however some modded blocks may have a higher value.
