mod: index: added more contributors

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -46,3 +46,5 @@ A big thanks to the many people below who make this site work. This would not be
 - WhyFencePost: Project lead, page design, data transfer
 - NinjaMike: Many uniforms including Iris exclusive uniforms
 - IMS: Setting up the page, general support of the site and also the URL
+- Kixys: Main banner image
+- JoshTheB: Added a number of uniforms
