feat: uniforms: added eyeAltitude and upPosition

--- a/src/content/docs/reference/Uniforms/General/eyeAltitude.mdx
+++ b/src/content/docs/reference/Uniforms/General/eyeAltitude.mdx
@@ -4,9 +4,8 @@ description: eyeAltitude
 sidebar:
   label: eyeAltitude
   order: 1
-  badge:
-    text: Unfinished
-    variant: caution
 ---
 
 ### `uniform float eyeAltitude;`
+
+This uniform stores the float value of the altitude of the player, stored in blocks. This value matches the one displayed on the `f3` screen. For more information visit the [Minecraft Wiki](https://minecraft.wiki/w/Altitude) article on altitude.
