--- a/src/content/docs/reference/Uniforms/General/upPosition.mdx
+++ b/src/content/docs/reference/Uniforms/General/upPosition.mdx
@@ -4,9 +4,7 @@ description: upPosition
 sidebar:
   label: upPosition
   order: 1
-  badge:
-    text: Unfinished
-    variant: caution
 ---
 
 ### `uniform vec3 upPosition;`
+This uniform stores the up value in [view space](/how_to/spaces). This value can also be pulled from `gbufferModelView[1].xyz`. The length of this adds up to 100 (`normalizedValue * 100`).
