--- a/src/content/docs/reference/Mod/DH/dh_shaders.mdx
+++ b/src/content/docs/reference/Mod/DH/dh_shaders.mdx
@@ -8,9 +8,11 @@ sidebar:
 
 The shaders below are known to work with DH. If your shader is missing please contact us in [Iris Discord](https://discord.com/invite/jQJnav2jPu) by pinging <span style="color:#7ce0e0">`@Documentation Developer`</span> in `#docs-dev`.
 
-- Bliss by Xonk - [https://github.com/X0nk/Bliss-Shader/archive/refs/heads/main.zip](https://github.com/X0nk/Bliss-Shader/archive/refs/heads/main.zip)
-- BSL by Capt Tatsu - [http://bitslablab.com/bslshaders/](http://bitslablab.com/bslshaders/)
-- Photon by SixthSurge - [https://github.com/sixthsurge/photon/archive/refs/heads/main.zip](https://github.com/sixthsurge/photon/archive/refs/heads/main.zip)
-- Noble by BelmuTM - [https://github.com/BelmuTM/Noble/archive/refs/heads/master.zip](https://github.com/BelmuTM/Noble/archive/refs/heads/master.zip)
-- Shrimple by Null-MC - [https://github.com/Null-MC/Shrimple/archive/refs/heads/main.zip](https://github.com/Null-MC/Shrimple/archive/refs/heads/main.zip)
-- CTMPOMFIX by timetravelbeard - [https://www.curseforge.com/minecraft/shaders/ctmpomfix-shader-chocapic13-shaders-edit/files/5111816](https://www.curseforge.com/minecraft/shaders/ctmpomfix-shader-chocapic13-shaders-edit/files/5111816)
+| Shader                                                                                                           | Creator         |
+|------------------------------------------------------------------------------------------------------------------|-----------------|
+| [Bliss](https://github.com/X0nk/Bliss-Shader/archive/refs/heads/main.zip)                                        | Xonk            |
+| [BSL](http://bitslablab.com/bslshaders/)                                                                         | Capt Tatsu      |
+| [Photon](https://github.com/sixthsurge/photon/archive/refs/heads/main.zip)                                       | SixthSurge      |
+| [Noble](https://github.com/BelmuTM/Noble/archive/refs/heads/master.zip)                                          | BelmuTM         |
+| [Shrimple](https://github.com/Null-MC/Shrimple/archive/refs/heads/main.zip)                                      | Null-MC         |
+| [CTMPOMFIX](https://www.curseforge.com/minecraft/shaders/ctmpomfix-shader-chocapic13-shaders-edit/files/5111816) | timetravelbeard |
