--- a/src/content/docs/reference/Uniforms/General/alphaTestRef.mdx
+++ b/src/content/docs/reference/Uniforms/General/alphaTestRef.mdx
@@ -12,4 +12,7 @@ import { Aside } from '@astrojs/starlight/components';
 
 ### `uniform float alphaTestRef;`
 
---Description Here--
+This value stores the alpha value that Iris recommends you discard pixels bellow. This value is commonly `0.1`, but can change in certain cases. Therefore the uniform should be used. It is normally used like this:
+```glsl
+if (albedoOut.a < alphaTestRef) discard;
+```
