feat: directives/uniforms: add iris exclusive directives

--- a/src/content/docs/reference/Directives/Shaders.Properties/flags.mdx
+++ b/src/content/docs/reference/Directives/Shaders.Properties/flags.mdx
@@ -21,7 +21,7 @@ iris.features.optional=BLOCK_EMISSION_ATTRIBUTE ENTITY_TRANSLUCENT SSBO
 
 The following are currently valid options:
 
-`SEPARATE_HARDWARE_SAMPLERS` (required for Separate Hardware Shadow Samplers)
+`SEPARATE_HARDWARE_SAMPLERS` (required for [Separate Hardware Shadow Samplers](/reference/buffers/shadowtex))
 
 `PER_BUFFER_BLENDING`
 
@@ -33,8 +33,8 @@ The following are currently valid options:
 
 `CUSTOM_IMAGES` (required for Custom Images)
 
-`HIGHER_SHADOWCOLOR` (required for Extended Shadowcolor)
+`HIGHER_SHADOWCOLOR` (required for [Extended Shadowcolor](/reference/buffers/shadowcolor))
 
-`REVERSED_CULLING` (recommended, but not required for Reverse Shadow Culling)
+`REVERSED_CULLING` (recommended, but not required for [Reverse Shadow Culling](/reference/directives/constants/voxeldistance))
 
 `BLOCK_EMISSION_ATTRIBUTE` (recommended, but not required for [Block Emission: at_midBlock.w] as of [iris-1.7.0-snapshotmc1.20.4-a787322])
