feat: Buffers: add SSBO and custom images

--- a/src/content/docs/reference/Buffers/custom_textures.mdx
+++ b/src/content/docs/reference/Buffers/custom_textures.mdx
@@ -1,8 +1,8 @@
 ---
-title: Custom Buffers
-description: Custom Buffers
+title: Custom Textures
+description: Custom Textures
 sidebar:
-  label: Custom Buffers
+  label: Custom Textures
   order: 2
 ---
 
